added to maydemo

--- a/DemoFile.html
+++ b/DemoFile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Demo File</h1>
-        <h2>Text</h2>
-        <p> This is a Sentence</p>
+        <strong><h3>Text</h3></strong>
+        <p> This is a Sentence informing you that I've made some changes to this page.</p>
     </body>
 </html>
